--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: rgb(255, 196, 0);
+  margin-bottom: 100px;
 }
 
 #banner {
@@ -21,7 +22,7 @@ body {
 }
 
 #top-link {
-  background-color: rgb(255, 166, 0);
+  background-color: rgb(255, 181, 0);
   text-align: center;
   height: 100px;
   padding: 20px 0 0 0;
@@ -32,6 +33,7 @@ body {
   color: rgb(0, 102, 255);
   font-size: 2.4em;
   font-weight: 500;
+  margin-right: 10px;
 }
 
 .link:hover {
@@ -47,9 +49,14 @@ body {
 
 .table {
   background-color: rgb(255, 242, 129);
-  border: 5px solid black;
   font-size: 1.5em;
   font-weight: 600;
+}
+
+th {
+  padding-left: 150px !important;
+  border-bottom: 5px solid black;
+  height: 25px;
 }
 
 #front-page {
@@ -59,6 +66,7 @@ body {
 .link-tb {
   text-decoration: none;  
   color: rgb(0, 102, 255);
+  padding-right: 10px;
 }
 
 .link-tb:hover { 
@@ -69,7 +77,7 @@ body {
   display: flex;
   width: 600px;
   justify-content: space-between;
-  margin: 60px auto 0 auto;
+  margin: 10px auto 0 auto;
   font-size: 1.5em;
   font-weight: 600;
 }
@@ -102,27 +110,173 @@ input {
   font-weight: 800;
 }
 
-button {
+h3 {
+  margin-bottom: 45px;
+}
+
+#pet-info {
+  width: 500px;
+  margin: 50px auto 0 auto;
+  font-weight: 600;
+  font-size: 1.6em;
+  text-align: center;
+}
+
+#nav {
+  background-color: rgb(255, 166, 0);
+  text-align: center;
+  padding: 25px 0;
+}
+
+.link-btn {
+  border: none;
+  background-color: rgb(255, 166, 0);
+}
+
+.link-btnn:hover {
+  border: none;
+}
+
+#loggedin-link {
+  background-color: rgb(255, 181, 0);
+  text-align: center;
+  height: 100px;
+  padding: 20px 0 0 0;
+}
+
+#button button {
+  border: none;
+  background-color: rgb(255, 242, 129);
+  color: rgb(0, 102, 255);
+  font-size: 1em;
+  font-weight: 600;
+}
+
+#button button:hover {
+  color: white;
+}
+
+#flex-1 {
+  display: flex;
+}
+
+#flex-2 {
+  display: flex;
+  border: none;
+}
+
+td {
+  padding-left: 10px;
+}
+
+.more {
+  margin-right: 100px;
+}
+
+#adopt-form {
+  text-align: center;
+  margin-top: 45px;
+}
+
+#button-detail-delete {
+  text-align: center;
+}
+
+#button-detail-delete button {
   background-color: white;
   padding: 10px 20px;
   font-size: 1.5em;
-  font-weight: 600; 
-  border: 5px solid black; 
+  font-weight: 600;
+  border: 5px solid black;
+  margin-top: 30px;
 }
 
-button:hover {
+#button-detail-delete button:hover {
   color: rgb(0, 102, 255);
   border: 5px solid rgb(0, 102, 255);
 }
 
-#button {
-  text-align: center;
-  margin-top: 50px;
+.bold {
+  font-weight: 800;
 }
 
-#pet-info {
-  width: 270px;
-  margin: 50px auto 0 auto;
+#img-field {
+  margin-top: 50px;
+} 
+#img-field p {
+  text-align: center;
   font-weight: 600;
-  font-size: 1.6em;
+  font-size: 1.5em;
 }
+
+#img-field input[type="text"] {
+  display: block;
+  margin : 0 auto;
+  font-size: 1.5em;
+  width: 600px;
+}
+
+img {
+  margin-bottom: 35px;
+  width: 500px;
+}
+
+#account-page {
+  display: flex;
+  justify-content: space-evenly
+}
+
+#account {
+  height: 750px;
+  text-align: center;
+}
+
+.container {
+  text-align: center;
+}
+
+.cont {
+  height: 650px;
+  background-color: rgb(255, 242, 129);
+  border: 5px solid black;
+}
+
+#diff th, #diff td {
+  padding-left: 100px !important;
+  border-bottom: 1px solid black;
+  font-size: 1em;
+}
+
+#hello {
+  text-align: center;
+  padding: 45px 0 ;
+}
+
+#table {
+  border: 5px solid  black;
+}
+
+#table td {
+  padding-left: 150px !important;
+}
+
+.delete {
+  border: 5px solid black;
+  padding: 15px 20px;
+  font-weight: 600;
+  background-color: white;
+  margin: 50px 0 100px 0;
+  font-size: 1.5em;
+}
+
+.delete:hover {
+  color: rgb(0, 102, 255);
+  border: 5px solid rgb(0, 102, 255);
+}
+
+#acct {
+  text-align: center;
+  padding: 30px 0;
+}
+
+
