--- a/client/src/App.css
+++ b/client/src/App.css
@@ -279,4 +279,13 @@ img {
   padding: 30px 0;
 }
 
+.btn-btn-primary {
+  padding: 10px 20px;
+  margin-top: 40px;
+}
+
+#logreg {
+  text-align: center;
+}
+
 
